<resources>
    <string name="app_name">Charity Boss</string>

    <string name="title_activity_splash_fs" translatable="false">SplashFSActivity</string>
    <string name="dummy_button">OKAY</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="createIDButton">User Account Settings</string>
    <string name="textDefaultUserID">User Account Not Setup</string>
    <string name="ratingDialogSetButton">Give Rating</string>
    <string name="setUserNameText">Name</string>
    <string name="setUserEmailText" translatable="false">Email</string>
    <string name="setUserTakePhotoText">Save User</string>
    <string name="preference_file_key" translatable="false">com.dobson.www.PREFERENCE_FILE_KEY</string>
    <string name="setUserCreateNewUserText">User Settings</string>
    <string name="setUserClearButton">Clear Settings</string>
    <string name="mainActivitySearchCharities">Search Charities</string>
    <string name="searchActivityTitle">Search for Charities</string>
    <string name="searchDonateButton">Give To</string>
    <string name="searchSelectCharity">Select Charity</string>
    <string name="searchThanksDude">Thanks</string>
    <string name="mainActivityNeedToSetUserFirst">Must create a user before giving</string>
    <string name="mainActivityLastGavePreface">You last gave to</string>
    <string name="searchInvalidInfo">You need to input at least a name</string>
</resources>
