<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dobsonsoft.www.charityboss.SetUserActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <TextView
            android:id="@+id/textViewCreateUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setUserCreateNewUserText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/setUserNameText" />

        <EditText
            android:id="@+id/editTextUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/setUserEmailText" />

        <Button
            android:id="@+id/buttonUserActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setUserTakePhotoText"
            tools:layout_editor_absoluteX="-85dp"
            tools:layout_editor_absoluteY="39dp" />

        <Button
            android:id="@+id/buttonClearUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setUserClearButton" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
